[package]
name = "life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
cod = "3.1.0"
lazy_static = "1.4.0"
anyhow = "1.0"
futures = "0.3"
rayon = " 1.6"
num-traits = "0.2"
bevy = "0.9"
